# django-project-template

./: .env.default  Pipfile  fabfile.py  manage.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: django-project.yml
project_name/: manage.py  settings.py  wsgi.py
project_name/project_name/: asgi.py  settings.py  urls.py  wsgi.py
project_name/project_name/settings/: base.py  local.py
tasks/: __init__.py  base.py  local.py
