[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = "A Django project."
authors = ["Josh Ourisman <me@josho.io>"]
license = "private"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.2"
whitenoise = {version = "^5.3.0", extras = ["brotli"]}
django-extensions = "^3.1.3"
psycopg2-binary = "^2.9.1"
django-model-utils = "^4.1.1"
django-pydantic-settings = "^0.4.1"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
ptpython = "^3.0.20"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
