[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = "A Django project."
authors = ["Josh Ourisman <me@josho.io>"]
license = "private"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.2"
whitenoise = {version = "^6.0.0", extras = ["brotli"]}
django-extensions = "^3.1.5"
psycopg2-binary = "^2.9.3"
django-model-utils = "^4.2.0"
django-pydantic-settings = "^0.6.2"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
ptpython = "^3.0.20"
invoke = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
