[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = "A Django project."
authors = ["Josh Ourisman <me@josho.io>"]
license = "private"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.2"
whitenoise = {version = "^6.2.0", extras = ["brotli"]}
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.4"
django-model-utils = "^4.2.0"
django-pydantic-settings = "^0.6.3"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
ptpython = "^3.0.20"
invoke = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
